Rewamped test for UserInputController